<resources>
    <string name="app_name">sneaker</string>
    <string name="create_an_account"><u>Create an account</u></string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="title">Sneaker \n Maniac</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="phone">Phone number</string>
    <string name="register">Register</string>
    <string name="are_searching">Ищете что-то конкретное?</string>
    <string name="cart">Корзина:</string>
    <string name="your_order">Ваш заказ</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="create_order">Перейти к оформлению заказа</string>
    <string name="amount">Итого:</string>
    <string name="number_card">Номер карты</string>
    <string name="date_card">Срок действия</string>
    <string name="cvc_card">CVV/CVC</string>
    <string name="name_owner_card">ФИ владельца карты</string>
    <string name="full_address">Полный адрес</string>
    <string name="index_address">Индекс</string>
    <string name="address">Адрес</string>
    <string name="payment_data">Платежные данные</string>
    <string name="save">Сохранить</string>
</resources>