<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/spectral_bold"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spectral_bold"
            android:text="@string/payment_data"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNumberCard"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/border_edit_text"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/number_card"
            android:maxLength="16"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDateCard"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/border_edit_text"
                android:fontFamily="@font/spectral_bold"
                android:hint="@string/date_card"
                android:maxLength="5"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCvcCard"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/border_edit_text"
                android:fontFamily="@font/spectral_bold"
                android:hint="@string/cvc_card"
                android:inputType="number"
                android:maxLength="3"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNameOwnerCard"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/border_edit_text"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/name_owner_card"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spectral_bold"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/border_edit_text"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/full_address"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etIndexAddress"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/border_edit_text"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/index_address"
            android:inputType="number"
            android:maxLength="6"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backArrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_arrow" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdateProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/border_edit_text"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/spectral_bold"
                android:paddingHorizontal="40dp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>