<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_sneaker" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/spectral_bold"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/border_edit_text"
            android:drawableEnd="@drawable/ic_email"
            android:drawableTint="@color/black"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edit_text"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableTint="@color/black"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edit_text"
            android:drawableEnd="@drawable/ic_phone"
            android:drawableTint="@color/black"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_edit_text"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/spectral_bold"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>