<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/ic_arrow"
            app:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:fontFamily="@font/spectral_bold"
            android:gravity="end"
            android:paddingHorizontal="16dp"
            android:text="@string/your_order"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ProgressBar
            android:id="@+id/contentLoader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:theme="@style/Theme.SneakerManiac"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sneaksCarts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/sneak_cart_cell" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/cartLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spectral_bold"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/border_edit_text"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/spectral_bold"
            android:hint="@string/create_order"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</LinearLayout>